--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "isomorphic-fetch": "^3.0.0",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
