--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^4.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "isomorphic-fetch": "^3.0.0",
     "normalize.css": "^8.0.1",
