--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^10.0.0",
     "gatsby": "^3.3.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-image": "^1.2.1",
@@ -16,6 +17,7 @@
     "gatsby-plugin-styled-components": "^4.3.0",
     "gatsby-remark-images": "^5.2.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-sanity": "^7.0.4",
     "gatsby-transformer-remark": "^4.2.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "isomorphic-fetch": "^3.0.0",
